--- a/MduiBlazor.Shared/Pages/Ripples.razor
+++ b/MduiBlazor.Shared/Pages/Ripples.razor
@@ -3,12 +3,12 @@
 <MduiText Typo="@Typo.display1">涟漪动画效果</MduiText>
 <MduiText Typo="@Typo.title">添加涟漪动画效果后，会在点击元素时，产生向外扩散的水波纹效果。</MduiText>
 
-<MduiDivider />
+<MduiDivider Class="mdui-m-y-3" />
 
 <MduiButton>button</MduiButton>
 <MduiButton Color="@Colors.Blue.Primary">button</MduiButton>
 
-<MduiDivider />
+<MduiDivider Class="mdui-m-y-3" />
 
 <MduiButton Color="@Colors.Yellow.Primary" Class="mdui-ripple-black">black</MduiButton>
 <MduiButton Color="@Colors.Blue.Primary" Class="mdui-ripple-white">white</MduiButton>
