--- a/MduiBlazor.Shared/Pages/Tables.razor
+++ b/MduiBlazor.Shared/Pages/Tables.razor
@@ -7,8 +7,8 @@
     <MduiTable Items="@_forecasts" Hoverable>
         <HeadContent>
             <MduiTh>Date</MduiTh>
-            <MduiTh AlignRight>TemperatureC</MduiTh>
-            <MduiTh AlignRight>TemperatureF</MduiTh>
+            <MduiTh>TemperatureC</MduiTh>
+            <MduiTh>TemperatureF</MduiTh>
             <MduiTh>Summary</MduiTh>
         </HeadContent>
         <Columns>
