--- a/mdui/src/components/selection_control/radio.less
+++ b/mdui/src/components/selection_control/radio.less
@@ -17,7 +17,8 @@
   position: relative;
   display: inline-block;
   height: 36px;
-  padding-left: 36px;
+  margin: 0 18px;
+  padding-left: 24px;
   line-height: 36px;
   cursor: pointer;
   user-select: none;
@@ -29,10 +30,6 @@
     height: 0;
     overflow: hidden;
     opacity: 0;
-  }
-
-  .mdui-radio-icon {
-    margin-left: 15px;
   }
 }
 
