--- a/mdui/src/components/selection_control/switch.less
+++ b/mdui/src/components/selection_control/switch.less
@@ -7,6 +7,7 @@
 .mdui-switch {
   display: inline-block;
   height: 36px;
+  margin: 0 18px;
   line-height: 36px;
   cursor: pointer;
   user-select: none;
@@ -18,11 +19,6 @@
     height: 0;
     overflow: hidden;
     opacity: 0;
-  }
-
-  .mdui-switch-icon {
-    margin-right: 15px;
-    margin-left: 15px;
   }
 }
 
