--- a/mdui/src/components/table/index.less
+++ b/mdui/src/components/table/index.less
@@ -49,9 +49,8 @@
 
 /* 每一行前面的复选框 */
 .mdui-table-cell-checkbox {
-  padding-top: 0 !important;
-  padding-bottom: 0 !important;
-  padding-left: 24px !important;
+  width: 60px;
+  padding: 0 !important;
 
   .mdui-checkbox {
     margin-top: 7px;
@@ -65,21 +64,6 @@
 th.mdui-table-cell-checkbox {
   .mdui-checkbox {
     margin-top: 11px;
-  }
-}
-
-.mdui-table {
-  th, td {
-    &:last-child {
-      padding-right: 24px;
-    }
-    &:first-child {
-      padding-right: 0;
-      padding-left: 24px
-    }
-    &:nth-child(2) {
-      padding-left: 24px;
-    }
   }
 }
 
