--- a/MduiBlazor/wwwroot/css/mdui.css
+++ b/MduiBlazor/wwwroot/css/mdui.css
@@ -6992,9 +6992,8 @@ body *::-webkit-scrollbar-thumb {
 }
 /* 每一行前面的复选框 */
 .mdui-table-cell-checkbox {
-  padding-top: 0 !important;
-  padding-bottom: 0 !important;
-  padding-left: 24px !important;
+  width: 60px;
+  padding: 0 !important;
 }
 .mdui-table-cell-checkbox .mdui-checkbox {
   margin-top: 7px;
@@ -7005,19 +7004,6 @@ body *::-webkit-scrollbar-thumb {
 }
 th.mdui-table-cell-checkbox .mdui-checkbox {
   margin-top: 11px;
-}
-.mdui-table th:last-child,
-.mdui-table td:last-child {
-  padding-right: 24px;
-}
-.mdui-table th:first-child,
-.mdui-table td:first-child {
-  padding-right: 0;
-  padding-left: 24px;
-}
-.mdui-table th:nth-child(2),
-.mdui-table td:nth-child(2) {
-  padding-left: 24px;
 }
 /* 鼠标悬浮时行背景加深 */
 .mdui-table-hoverable tbody tr:hover {
@@ -8169,7 +8155,8 @@ th.mdui-table-cell-checkbox .mdui-checkbox {
   position: relative;
   display: inline-block;
   height: 36px;
-  padding-left: 36px;
+  margin: 0 18px;
+  padding-left: 24px;
   line-height: 36px;
   cursor: pointer;
   -webkit-user-select: none;
@@ -8183,9 +8170,6 @@ th.mdui-table-cell-checkbox .mdui-checkbox {
   height: 0;
   overflow: hidden;
   opacity: 0;
-}
-.mdui-checkbox .mdui-checkbox-icon {
-  margin-left: 15px;
 }
 /* 透明的圆形，用于生成圆形阴影 */
 .mdui-checkbox-icon {
@@ -8555,7 +8539,8 @@ th.mdui-table-cell-checkbox .mdui-checkbox {
   position: relative;
   display: inline-block;
   height: 36px;
-  padding-left: 36px;
+  margin: 0 18px;
+  padding-left: 24px;
   line-height: 36px;
   cursor: pointer;
   -webkit-user-select: none;
@@ -8569,9 +8554,6 @@ th.mdui-table-cell-checkbox .mdui-checkbox {
   height: 0;
   overflow: hidden;
   opacity: 0;
-}
-.mdui-radio .mdui-radio-icon {
-  margin-left: 15px;
 }
 /* 图标外圈 */
 .mdui-radio-icon {
@@ -8859,6 +8841,7 @@ th.mdui-table-cell-checkbox .mdui-checkbox {
 .mdui-switch {
   display: inline-block;
   height: 36px;
+  margin: 0 18px;
   line-height: 36px;
   cursor: pointer;
   -webkit-user-select: none;
@@ -8872,10 +8855,6 @@ th.mdui-table-cell-checkbox .mdui-checkbox {
   height: 0;
   overflow: hidden;
   opacity: 0;
-}
-.mdui-switch .mdui-switch-icon {
-  margin-right: 15px;
-  margin-left: 15px;
 }
 /* 图标轨道 */
 .mdui-switch-icon {
