--- a/mdui/src/components/selection_control/checkbox.less
+++ b/mdui/src/components/selection_control/checkbox.less
@@ -8,7 +8,8 @@
   position: relative;
   display: inline-block;
   height: 36px;
-  padding-left: 36px;
+  margin: 0 18px;
+  padding-left: 24px;
   line-height: 36px;
   cursor: pointer;
   user-select: none;
@@ -20,10 +21,6 @@
     height: 0;
     overflow: hidden;
     opacity: 0;
-  }
-
-  .mdui-checkbox-icon {
-    margin-left: 15px;
   }
 }
 
