--- a/MduiBlazor/Components/Drawer/MduiDrawer.razor
+++ b/MduiBlazor/Components/Drawer/MduiDrawer.razor
@@ -4,4 +4,7 @@
 <div class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
     @ChildContent
 </div>
-<MduiOverlay Visible="@(Opened&&!Persistent)" OnBackgroundClick="@OnOverlayClickedAsync" />
+@if (!Persistent)
+{
+    <MduiOverlay Visible="@Opened" OnBackgroundClick="@OnOverlayClickedAsync" />
+}
