--- a/MduiBlazor/wwwroot/css/mdui.css
+++ b/MduiBlazor/wwwroot/css/mdui.css
@@ -11892,7 +11892,7 @@ select.mdui-select[multiple] option:last-child {
   right: 0;
   left: 0;
   z-index: 6000;
-  display: block;
+  display: none;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   width: 92%;
@@ -11921,6 +11921,9 @@ select.mdui-select[multiple] option:last-child {
     max-height: 80%;
   }
 }
+.mdui-dialog.mdui-dialog-open {
+  display: block;
+}
 /* 提示框标题 */
 .mdui-dialog-title {
   -webkit-box-sizing: border-box;
@@ -11938,6 +11941,7 @@ select.mdui-select[multiple] option:last-child {
 .mdui-dialog-content {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  max-height: 65vh;
   padding: 24px;
   overflow-y: auto;
   color: rgba(0, 0, 0, 0.7);
