fix dialog body scroll

--- a/MduiBlazor/wwwroot/css/mdui.css
+++ b/MduiBlazor/wwwroot/css/mdui.css
@@ -11941,7 +11941,7 @@ select.mdui-select[multiple] option:last-child {
 .mdui-dialog-content {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  max-height: 65vh;
+  max-height: calc(80vh - 120px);
   padding: 24px;
   overflow-y: auto;
   color: rgba(0, 0, 0, 0.7);
