--- a/mdui/src/components/dialog/index.less
+++ b/mdui/src/components/dialog/index.less
@@ -59,7 +59,7 @@
 /* 提示框内容 */
 .mdui-dialog-content {
   box-sizing: border-box;
-  max-height: 65vh;
+  max-height: calc(80vh - 120px);
   padding: 24px;
   overflow-y: auto;
   color: rgba(0, 0, 0, 0.7);
