--- a/MduiBlazor/Components/Button/MduiIconButton.razor
+++ b/MduiBlazor/Components/Button/MduiIconButton.razor
@@ -11,7 +11,7 @@
             Href="@Href"
             Target="@Target"
             HtmlTag="@HtmlTag"
-            Ripple="@Ripple"
+            DisableRipple="@DisableRipple"
             Text="@true"
             OnClick="@OnClick"
             Command="@Command"
