--- a/mdui/src/index.less
+++ b/mdui/src/index.less
@@ -68,3 +68,4 @@
 @import './components/progress/progress';
 @import './components/progress/spinner';
 @import './components/menu/index';
+@import './components/collapse/index';
