--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -1,21 +1,49 @@
-﻿<MduiNavMenu>
-    <MduiNavMenuItem Href="" Icon="home" Match="NavLinkMatch.All">Home</MduiNavMenuItem>
-    <MduiNavMenuItem Href="ripples" Icon="">Ripples</MduiNavMenuItem>
-    <MduiNavMenuItem Href="bars" Icon="">Bars</MduiNavMenuItem>
-    <MduiNavMenuItem Href="bottomnav" Icon="">BottomNav</MduiNavMenuItem>
-    <MduiNavMenuItem Href="buttons" Icon="">Buttons</MduiNavMenuItem>
-    <MduiNavMenuItem Href="cards" Icon="">Cards</MduiNavMenuItem>
-    <MduiNavMenuItem Href="chips" Icon="">Chips</MduiNavMenuItem>
-    <MduiNavMenuItem Href="counter" Icon="add">Counter</MduiNavMenuItem>
-    <MduiNavMenuItem Href="dialogs" Icon="">Dialogs</MduiNavMenuItem>
-    <MduiNavMenuItem Href="fetchdata">Fetch data</MduiNavMenuItem>
-    <MduiNavMenuItem Href="inputs">Form & Inputs</MduiNavMenuItem>
-    <MduiNavMenuItem Href="menus">Menus</MduiNavMenuItem>
-    <MduiNavMenuItem Href="pagination">Pagination</MduiNavMenuItem>
-    <MduiNavMenuItem Href="panels">Panels</MduiNavMenuItem>
-    <MduiNavMenuItem Href="progress">Progress</MduiNavMenuItem>
-    <MduiNavMenuItem Href="snackbars">Snackbars</MduiNavMenuItem>
-    <MduiNavMenuItem Href="tables">Tables</MduiNavMenuItem>
-    <MduiNavMenuItem Href="tabs">Tabs</MduiNavMenuItem>
-    <MduiNavMenuItem Href="typography">Typography</MduiNavMenuItem>
-</MduiNavMenu>
+﻿<MduiList NavMenu>
+    <MduiListItem Href="" Match="NavLinkMatch.All">
+        <MduiListItemIcon Icon="home" IconColor="@Colors.Blue.Primary" />
+        <MduiListItemContent>Home</MduiListItemContent>
+    </MduiListItem>
+    <MduiListItem Href="counter">
+        <MduiListItemIcon Icon="add" IconColor="@Colors.Purple.Primary" />
+        <MduiListItemContent>Counter</MduiListItemContent>
+    </MduiListItem>
+    <MduiListItem Href="fetchdata">
+        <MduiListItemIcon Icon="dashboard" IconColor="@Colors.Brown.Primary" />
+        <MduiListItemContent>Fetch data</MduiListItemContent>
+    </MduiListItem>
+    <MduiCollapseItem Title="样式" Icon="layers" IconColor="@Colors.DeepOrange.Primary">
+        <MduiListItem Href="ripples">Ripples</MduiListItem>
+        <MduiListItem Href="typography">Typography</MduiListItem>
+    </MduiCollapseItem>
+    <MduiCollapseItem Title="组件" Icon="widgets" IconColor="@Colors.Green.Primary">
+        <MduiListItem Href="bars">
+            <MduiListItemContent>Bars</MduiListItemContent>
+        </MduiListItem>
+        <MduiListItem Href="bottomnav">
+            <MduiListItemContent>BottomNav</MduiListItemContent>
+        </MduiListItem>
+        <MduiListItem Href="buttons">
+            <MduiListItemContent>Buttons</MduiListItemContent>
+        </MduiListItem>
+        <MduiListItem Href="cards">
+            <MduiListItemContent>Cards</MduiListItemContent>
+        </MduiListItem>
+        <MduiListItem Href="chips">
+            <MduiListItemContent>Chips</MduiListItemContent>
+        </MduiListItem>
+        <MduiListItem Href="dialogs">
+            <MduiListItemContent>Dialogs</MduiListItemContent>
+        </MduiListItem>
+        <MduiListItem Href="inputs">
+            <MduiListItemContent>Form & Inputs</MduiListItemContent>
+        </MduiListItem>
+        <MduiListItem Href="list">List</MduiListItem>
+        <MduiListItem Href="menus">Menus</MduiListItem>
+        <MduiListItem Href="pagination">Pagination</MduiListItem>
+        <MduiListItem Href="panels">Panels</MduiListItem>
+        <MduiListItem Href="progress">Progress</MduiListItem>
+        <MduiListItem Href="snackbars">Snackbars</MduiListItem>
+        <MduiListItem Href="tables">Tables</MduiListItem>
+        <MduiListItem Href="tabs">Tabs</MduiListItem>
+    </MduiCollapseItem>
+</MduiList>
