--- a/MduiBlazor/Components/List/MduiList.razor
+++ b/MduiBlazor/Components/List/MduiList.razor
@@ -1,6 +1,8 @@
 ﻿@namespace MduiBlazor
 @inherits MduiComponentBase
 
-<div class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
-    @ChildContent
-</div>
+<MduiElement HtmlTag="@HtmlTag" Class="@Classname" Style="@Style" UseMduiTypo="@UseMduiTypo" @attributes="@AdditionalAttributes">
+    <CascadingValue Value="@this" IsFixed>
+        @ChildContent
+    </CascadingValue>
+</MduiElement>
