--- a/MduiBlazor/Components/List/MduiSubheader.razor
+++ b/MduiBlazor/Components/List/MduiSubheader.razor
@@ -1,6 +1,6 @@
 ﻿@namespace MduiBlazor
 @inherits MduiComponentBase
 
-<MduiElement HtmlTag="@HtmlTag" Class="@Classname" Style="@Style" @attributes="@AdditionalAttributes">
+<li class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
     @ChildContent
-</MduiElement>
+</li>
