--- a/MduiBlazor/Components/NavMenu/MduiNavMenu.razor
+++ b/MduiBlazor/Components/NavMenu/MduiNavMenu.razor
@@ -1,8 +1,8 @@
 ﻿@namespace MduiBlazor
 @inherits MduiComponentBase
 
-<ul class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
+<div class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
     <CascadingValue Value="@this" IsFixed>
         @ChildContent
     </CascadingValue>
-</ul>
+</div>
