--- a/MduiBlazor/Components/NavMenu/MduiNavMenuCollapseItem.razor
+++ b/MduiBlazor/Components/NavMenu/MduiNavMenuCollapseItem.razor
@@ -1,18 +1,19 @@
 ﻿@namespace MduiBlazor
 @inherits MduiComponentBase
+@implements IDisposable
 
-<MduiElement HtmlTag="@HtmlTag" Class="@Classname" Style="@Style" @attributes="@AdditionalAttributes">
+<div class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
     <div class="@HeaderClassname" @onclick="@OnTitleClicked">
-        @if(Icon is not null)
+        @if (Icon is not null)
         {
             <MduiListItemIcon Icon="@Icon" IconColor="@IconColor" Custom="@CustomIcon" />
         }
         <div class="mdui-list-item-content">@Title</div>
         <i class="mdui-collapse-item-arrow mdui-icon material-icons">keyboard_arrow_down</i>
     </div>
-    <MduiElement HtmlTag="@BodyHtmlTag" Class="@BodyClassname" Style="@BodyStylelist">
+    <div class="@BodyClassname" style="@BodyStylelist">
         <CascadingValue Value="@this" IsFixed>
             @ChildContent
         </CascadingValue>
-    </MduiElement>
-</MduiElement>
+    </div>
+</div>
