--- a/mdui/src/index.less
+++ b/mdui/src/index.less
@@ -69,3 +69,4 @@
 @import './components/progress/spinner';
 @import './components/menu/index';
 @import './components/collapse/index';
+@import './components/layout/index';
