--- a/MduiBlazor/Components/Layout/MduiDrawer.razor
+++ b/MduiBlazor/Components/Layout/MduiDrawer.razor
@@ -1,9 +1,9 @@
 ﻿@namespace MduiBlazor
 @inherits MduiComponentBase
 
-<div class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
+<aside class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
     @ChildContent
-</div>
+</aside>
 @if (!Persistent)
 {
     <MduiOverlay Visible="@Opened" OnBackgroundClick="@OnOverlayClickedAsync" />
