fix menu component layout-theme

--- a/mdui/src/components/menu/index.less
+++ b/mdui/src/components/menu/index.less
@@ -14,6 +14,7 @@
   position: relative;
   display: inline-block;
   overflow: visible;
+  background-color: inherit !important;
 
   /* 菜单 */
   .mdui-menu-content {
@@ -218,7 +219,7 @@
  * =============================================================================
  */
 .layout-theme({
-  .mdui-menu {
+  .mdui-menu-content {
     color: #fff;
     background-color: @layout-dark-color-4;
   }
