--- a/MduiBlazor/wwwroot/css/mdui.css
+++ b/MduiBlazor/wwwroot/css/mdui.css
@@ -13253,6 +13253,7 @@ select.mdui-select[multiple] option:last-child {
   position: relative;
   display: inline-block;
   overflow: visible;
+  background-color: inherit !important;
   /* 菜单 */
 }
 .mdui-menu .mdui-menu-content {
@@ -13430,7 +13431,7 @@ select.mdui-select[multiple] option:last-child {
  * ************   Menu dark   ************
  * =============================================================================
  */
-.mdui-theme-layout-dark .mdui-menu {
+.mdui-theme-layout-dark .mdui-menu-content {
   color: #fff;
   background-color: #424242;
 }
@@ -13453,7 +13454,7 @@ select.mdui-select[multiple] option:last-child {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath d='M9.5 17.5l5-5-5-5z' fill='%23FFF'/%3E%3C/svg%3E");
 }
 @media (prefers-color-scheme: dark) {
-  .mdui-theme-layout-auto .mdui-menu {
+  .mdui-theme-layout-auto .mdui-menu-content {
     color: #fff;
     background-color: #424242;
   }
